--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "strict": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "jsxImportSource": "hono/jsx"
-  }
+  },
+  "include": ["./**/*.ts", "./**/*.d.ts", "./**/*.tsx", "./**/*.vue"],
+  "exclude": ["/node_modules"]
 }
