--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.2.2",
     "hono": "^4.4.7",
-    "mime": "^4.0.3"
+    "mime": "^4.0.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bun": "latest",
