--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@hono/zod-validator": "^0.2.2",
     "hono": "^4.4.7",
     "mime": "^4.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@hono/swagger-ui": "^0.3.0",
+    "@hono/zod-openapi": "^0.14.5",
     "@types/bun": "latest",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
